Added firefox in the list

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>- Vesuvius challenge: Challenge aiming to discover and decipher papyri discovered under the volcan ash in Herculanum, Pompeii.
     <p>- Obsidian: markdown notes app using local files.</p>
     <p>- KOReader: app for Kindle, Ubuntu and Android that aims to be a lightweight and simple book reader.</p>
+    <p>- Firefox: web browser mantained by the Mozilla Foundatation.
 </body>
 </html>
